<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_status"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fond"
    tools:context="com.sar2016.olivier.alexandra.yamba.UpdateStatusActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/update_title"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:textSize="@dimen/double_basic_height"
        android:id="@+id/textView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/update"
        android:textSize="@dimen/one_half_basic_height"
        android:id="@+id/update_status_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_settings"
        android:onClick="sendMessage" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/basic_height"
        android:paddingBottom="@dimen/basic_height"
        android:hint="@string/status_placeholder"
        android:maxLength="200"
        android:id="@+id/update_status_editText"
        android:layout_below="@+id/textView"
        android:background="@color/alphaWhite"
        android:gravity="top"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/update_status_button" />
</RelativeLayout>
